--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -7,7 +7,7 @@
       "environments": [ "edit" ],
       "isPalette": true,
       "paletteRect": "top: auto; bottom: 20px; left: 20px; height: 398px; width: 360px;",
-      "url": "https://main--franklin-library-host--dylandepass.hlx.live/tools/sidekick/library?base=https://main--boilerplate-with-library--dylandepass.hlx.live/library/library.json&api-test=https://main--boilerplate-with-library--dylandepass.hlx.live/tools/sidekick/plugins/api-test/api-test.js&tags=https://main--boilerplate-with-library--dylandepass.hlx.live/tools/sidekick/plugins/tags/tags.js",
+      "url": "https://main--franklin-library-host--dylandepass.hlx.live/tools/sidekick/library?base=https://main--helix-test-content-onedrive--adobe.hlx.page/block-library-tests/library-single-sheet.json",
       "includePaths": [ "**.docx**" ]
     }
   ]
